--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,47 @@ ul li a
 
 .contenu
 {
-  margin-top: 6vw;
+  /* margin-top: 6vw; */
 }
 
 .contenu p
 {
   width: 70%;
   margin-left: 15%;
+}
+
+.profil
+{
+    width: 20%;
+    height: 43vw;
+    background-color: rgb(33, 16, 183);
+    float: left;
+    margin: 0;
+    text-align: center;
+    color: white;
+    padding: 1vw;
+    font-size: 10px;
+    position: relative;
+}
+
+.profil .photo
+{
+  width: 20%;
+  height: 5vw;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.deconnect
+{
+  position: absolute;
+  bottom: 0;
+  width: 40%;
+  height: 3vw;
+  background-color: rgb(11, 60, 151);
+  color: white;
+  border: 0;
+  border-radius: 5px;
+  right: 5vw;
+  bottom: 2vw;
 }
